# moneyspread

./: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: Controls.tsx  EventMarkers.tsx  ExportButton.tsx  EyeCameraGrid.tsx  EyeCameraInset.tsx  GazeOverlay.tsx  HudPanel.tsx  PupilTrend.tsx  RecordingsList.tsx  SceneViewer.tsx  Timeline.tsx
lib/: config.ts  exposeLocalIp.ts  glassesProbe.ts  keepAliveWorker.ts  logger.ts  metrics.ts  sidecarApi.ts  store.ts  useReplayGaze.ts  useTheme.ts
lib/adapters/: mockAdapter.ts  types.ts  webrtcAdapter.ts
sidecar/: .gitignore  README.md  pyproject.toml
sidecar/scripts/: spike_recorder.py
sidecar/src/tobii_okn_sidecar/: __init__.py  __main__.py  app.py
sidecar/src/tobii_okn_sidecar/device/: __init__.py  client.py
sidecar/src/tobii_okn_sidecar/export/: __init__.py  ass_overlay.py  jobs.py  pipeline.py
sidecar/src/tobii_okn_sidecar/storage/: __init__.py  manifest.py  recording.py  sidecar_record.py
