[project]
name = "tobii-okn-sidecar"
version = "0.1.0"
description = "Sidecar service for Tobii Pro Glasses 3 OKN viewer: RTSP-based recording, scrubbable replay, annotated export. Talks to the device via g3pylib; exposes a small HTTP API to the local-first Next.js viewer."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
sidecar = "tobii_okn_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tobii_okn_sidecar"]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
